Added href to slide items links

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                 Detalhes
                 <i class="fas fa-info-circle"></i>
               </a>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <a class="button button--icon slide__button" href="https://jpdrsanchez.github.io/" target="_blank">
                 Acessar
                 <i class="fas fa-laptop"></i>
               </a>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <a class="button button--icon slide__button" href="https://github.com/jpdrsanchez/jpdrsanchez.github.io" target="_blank">
                 Github
                 <i class="fab fa-github"></i>
               </a>
@@ -108,11 +108,11 @@
                 Detalhes
                 <i class="fas fa-info-circle"></i>
               </a>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <a class="button button--icon slide__button" href="https://jpdrsanchez.github.io/bikcraft-sass/" target="_blank">
                 Acessar
                 <i class="fas fa-laptop"></i>
               </a>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <a class="button button--icon slide__button" href="https://github.com/jpdrsanchez/bikcraft-sass" target="_blank">
                 Github
                 <i class="fab fa-github"></i>
               </a>
@@ -126,11 +126,11 @@
                 Detalhes
                 <i class="fas fa-info-circle"></i>
               </a>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <a class="button button--icon slide__button" href="https://jpdrsanchez.github.io/surfbot/" target="_blank">
                 Acessar
                 <i class="fas fa-laptop"></i>
               </a>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <a class="button button--icon slide__button" href="https://github.com/jpdrsanchez/surfbot" target="_blank">
                 Github
                 <i class="fab fa-github"></i>
               </a>
@@ -144,11 +144,11 @@
                 Detalhes
                 <i class="fas fa-info-circle"></i>
               </a>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <a class="button button--icon slide__button" href="https://jpdrsanchez.github.io/flexblog/" target="_blank">
                 Acessar
                 <i class="fas fa-laptop"></i>
               </a>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <a class="button button--icon slide__button" href="https://github.com/jpdrsanchez/flexblog" target="_blank">
                 Github
                 <i class="fab fa-github"></i>
               </a>
