--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h1 class="hero__title js-animate top">Desenvolvimento <span class="red">Web</span></h1>
     <div class="button__wrapper">
       <a class="button js-animate left" href="#portfolio">Portfólio</a>
-      <a class="button js-animate right" href="#">Currículo</a>
+      <a class="button js-animate right" href="./dist/documents/joao-pedro-cv.pdf" target="_blank">Currículo</a>
     </div>
   </main>
 
@@ -83,7 +83,7 @@
       <div class="slide">
         <ul class="slide__content">
           <li class="slide__item">
-            <img src="./img/slide/jpdrsanchez-screencapture.png" alt="Sanchez">
+            <img src="./dist/img/slide/jpdrsanchez-screencapture.png" alt="Sanchez">
             <div class="slide__overlay">
               <h2 class="white slide__title">Sanchez | Web Dev</h2>
               <a class="button button--icon slide__button" href="#" target="_blank">
@@ -101,7 +101,7 @@
             </div>
           </li>
           <li class="slide__item">
-            <img src="./img/slide/bikcraft-screencapture.png" alt="Bikcraft">
+            <img src="./dist/img/slide/bikcraft-screencapture.png" alt="Bikcraft">
             <div class="slide__overlay">
               <h2 class="white slide__title">Bikcraft</h2>
               <a class="button button--icon slide__button" href="#" target="_blank">
@@ -119,7 +119,7 @@
             </div>
           </li>
           <li class="slide__item">
-            <img src="./img/slide/surfbot-screencapture.png" alt="Surfbot">
+            <img src="./dist/img/slide/surfbot-screencapture.png" alt="Surfbot">
             <div class="slide__overlay">
               <h2 class="white slide__title">Surfbot</h2>
               <a class="button button--icon slide__button" href="#" target="_blank">
@@ -137,7 +137,7 @@
             </div>
           </li>
           <li class="slide__item">
-            <img src="./img/slide/flexblog-screencapture.png" alt="Flexblog">
+            <img src="./dist/img/slide/flexblog-screencapture.png" alt="Flexblog">
             <div class="slide__overlay">
               <h2 class="white slide__title">Flexblog</h2>
               <a class="button button--icon slide__button" href="#" target="_blank">
@@ -182,7 +182,7 @@
   <section class="about js-scroll" id="about">
     <div class="about__container container">
       <h1 class="title white about__title">Sobre</h1>
-      <img class="about__image" src="img/about-photo.jpg" alt="João Pedro e sua eposa Jaqueline">
+      <img class="about__image" src="./dist/img/about-photo.jpg" alt="João Pedro e sua eposa Jaqueline">
       <div class="about__content-wrapper">
         <h2 class="subtitle white about__subtitle">Sobre mim</h2>
         <p class="about__text white">
