--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h1 class="hero__title js-animate top">Desenvolvimento <span class="red">Web</span></h1>
     <div class="button__wrapper">
       <a class="button js-animate left" href="#portfolio">Portfólio</a>
-      <a class="button js-animate right" href="./dist/documents/joao-pedro-cv.pdf" target="_blank">Currículo</a>
+      <a class="button js-animate right" href="./dist/documents/cv-joao-pedro.pdf" target="_blank">Currículo</a>
     </div>
   </main>
 
@@ -83,13 +83,13 @@
       <div class="slide">
         <ul class="slide__content">
           <li class="slide__item">
-            <img src="./dist/img/slide/jpdrsanchez-screencapture.png" alt="Sanchez">
+            <img src="./dist/img/slide/jpdrsanchez-screencapture.jpg" alt="Sanchez">
             <div class="slide__overlay">
               <h2 class="white slide__title">Sanchez | Web Dev</h2>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <!-- <a class="button button--icon slide__button" href="#" target="_blank">
                 Detalhes
                 <i class="fas fa-info-circle"></i>
-              </a>
+              </a> -->
               <a class="button button--icon slide__button" href="https://jpdrsanchez.github.io/" target="_blank">
                 Acessar
                 <i class="fas fa-laptop"></i>
@@ -101,13 +101,13 @@
             </div>
           </li>
           <li class="slide__item">
-            <img src="./dist/img/slide/bikcraft-screencapture.png" alt="Bikcraft">
+            <img src="./dist/img/slide/bikcraft-screencapture.jpg" alt="Bikcraft">
             <div class="slide__overlay">
               <h2 class="white slide__title">Bikcraft</h2>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <!-- <a class="button button--icon slide__button" href="#" target="_blank">
                 Detalhes
                 <i class="fas fa-info-circle"></i>
-              </a>
+              </a> -->
               <a class="button button--icon slide__button" href="https://jpdrsanchez.github.io/bikcraft-sass/" target="_blank">
                 Acessar
                 <i class="fas fa-laptop"></i>
@@ -119,12 +119,12 @@
             </div>
           </li>
           <li class="slide__item">
-            <img src="./dist/img/slide/surfbot-screencapture.png" alt="Surfbot">
+            <img src="./dist/img/slide/surfbot-screencapture.jpg" alt="Surfbot">
             <div class="slide__overlay">
               <h2 class="white slide__title">Surfbot</h2>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <!-- <a class="button button--icon slide__button" href="#" target="_blank">
                 Detalhes
-                <i class="fas fa-info-circle"></i>
+                <i class="fas fa-info-circle"></i> -->
               </a>
               <a class="button button--icon slide__button" href="https://jpdrsanchez.github.io/surfbot/" target="_blank">
                 Acessar
@@ -137,13 +137,13 @@
             </div>
           </li>
           <li class="slide__item">
-            <img src="./dist/img/slide/flexblog-screencapture.png" alt="Flexblog">
+            <img src="./dist/img/slide/flexblog-screencapture.jpg" alt="Flexblog">
             <div class="slide__overlay">
               <h2 class="white slide__title">Flexblog</h2>
-              <a class="button button--icon slide__button" href="#" target="_blank">
+              <!-- <a class="button button--icon slide__button" href="#" target="_blank">
                 Detalhes
                 <i class="fas fa-info-circle"></i>
-              </a>
+              </a> -->
               <a class="button button--icon slide__button" href="https://jpdrsanchez.github.io/flexblog/" target="_blank">
                 Acessar
                 <i class="fas fa-laptop"></i>
@@ -197,10 +197,6 @@
           <li class="about__text white"><span class="bold">Back-end:</span> PHP & Wordpress.</li>
           <li class="about__text white"><span class="bold">Task Runners:</span> Gulp.</li>
           <li class="about__text white"><span class="bold">UI:</span> Figma & Adobe XD.</li>
-        </ul>
-        <ul class="about__list">
-          <li class="about__icon white"><i class="fab fa-linkedin"></i></li>
-          <li class="about__icon white"><i class="fab fa-github-square"></i></li>
         </ul>
       </div>
     </div>
