Added clipboardlading page to slide

--- a/index.html
+++ b/index.html
@@ -101,6 +101,24 @@
             </div>
           </li>
           <li class="slide__item">
+            <img src="./dist/img/slide/clipboard-screencapture.jpg" alt="Clipboard Landing Page">
+            <div class="slide__overlay">
+              <h2 class="white slide__title">Clipboard Landing Page</h2>
+              <!-- <a class="button button--icon slide__button" href="#" target="_blank">
+                Detalhes
+                <i class="fas fa-info-circle"></i>
+              </a> -->
+              <a class="button button--icon slide__button" href="https://jpdrsanchez.github.io/clipboard-landing-page-master/" target="_blank">
+                Acessar
+                <i class="fas fa-laptop"></i>
+              </a>
+              <a class="button button--icon slide__button" href="https://github.com/jpdrsanchez/clipboard-landing-page-master" target="_blank">
+                Github
+                <i class="fab fa-github"></i>
+              </a>
+            </div>
+          </li>
+          <li class="slide__item">
             <img src="./dist/img/slide/bikcraft-screencapture.jpg" alt="Bikcraft">
             <div class="slide__overlay">
               <h2 class="white slide__title">Bikcraft</h2>
@@ -158,6 +176,7 @@
       </div>
       <nav class="slide-nav">
         <a class="slide-nav__link" href="#">jpdrsanchez</a>
+        <a class="slide-nav__link" href="#">clipboard landing page</a>
         <a class="slide-nav__link" href="#">bikcraft</a>
         <a class="slide-nav__link" href="#">surfbot</a>
         <a class="slide-nav__link" href="#">flexblog</a>
