Fixed js and added datasets

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
   </header>
   
   <main class="hero" id="hero">
-    <h1 class="hero__title js-animate top">Desenvolvimento <span class="red">Web</span></h1>
-    <div class="button__wrapper">
-      <a class="button js-animate left" href="#portfolio">Portfólio</a>
-      <a class="button js-animate right" href="./dist/documents/cv-joao-pedro.pdf" target="_blank">Currículo</a>
+    <h1 data-animation="400" class="hero__title top">Desenvolvimento <span class="red">Web</span></h1>
+    <div data-animation="800" class="button__wrapper top">
+      <a class="button" href="#portfolio">Portfólio</a>
+      <a class="button" href="./dist/documents/cv-joao-pedro.pdf" target="_blank">Currículo</a>
     </div>
   </main>
 
-  <section class="services js-scroll" id="services">
+  <section data-anime="scroll" class="services" id="services">
     <div class="services__container container">
       <h1 class="title services__title">Serviços</h1>
       <div class="services__item">
@@ -73,7 +73,7 @@
     </div>
   </section>
 
-  <section class="portfolio js-scroll" id="portfolio">
+  <section data-anime="scroll" class="portfolio" id="portfolio">
     <div class="portfolio__container container">
       <h1 class="title white">Portfólio</h1>
       <p class="section-description white">
@@ -198,7 +198,7 @@
     </blockquote>
   </section>
 
-  <section class="about js-scroll" id="about">
+  <section data-anime="scroll" class="about" id="about">
     <div class="about__container container">
       <h1 class="title white about__title">Sobre</h1>
       <img class="about__image" src="./dist/img/about-photo.jpg" alt="João Pedro e sua eposa Jaqueline">
@@ -221,7 +221,7 @@
     </div>
   </section>
 
-  <section class="contact js-scroll" id="contact">
+  <section data-anime="scroll" class="contact" id="contact">
     <div class="contact__container container">
       <h1 class="title contact__title">Contato</h1>
       <p class="section-description contact__description">
